fix(Textarea): fix border radius on Safari

--- a/src/components/Textarea/index.css
+++ b/src/components/Textarea/index.css
@@ -13,7 +13,7 @@
   height: 80%;
   width: 80%;
   resize: none;
+  border: 0;
   overflow: hidden;
   color: #AFAFAF;
-  padding: 7px 10px;
 }
